[package]
name = "luminance-windowing"
version = "0.1.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Common windowing code for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance"]

homepage = "https://github.com/phaazon/luminance-windowing"
repository = "https://github.com/phaazon/luminance-windowing"
documentation = "https://docs.rs/luminance-windowing"
readme = "README.md"
