[package]
name = "luminance-windowing"
version = "0.2.4"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Common windowing code for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-windowing"
repository = "https://github.com/phaazon/luminance-windowing"
documentation = "https://docs.rs/luminance-windowing"
readme = "README.md"

[badges]
travis-ci = { repository = "phaazon/luminance-windowing", branch = "master" }
is-it-maintained-issue-resolution = { repository = "phaazon/luminance-windowing" }
is-it-maintained-open-issues = { repository = "phaazon/luminance-windowing" }
maintenance = { status = "actively-developed" }

[dependencies]
luminance = "0.30"
